force-app/main/default/objects/ERP_Chart_Of_Accounts__c/ERP_Chart_Of_Accounts__c.object-meta.xml
<CustomObject>
    <description>List of Account Numbers from Oracle</description>
    <label>ERP Chart Of Account</label>
    <nameField>
        <label>ERP_CHART_OF_ACCOUNTS__C Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>ERP Chart Of Accounts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>