force-app/main/default/objects/ERP_Chart_Of_Accounts__c/fields/DATA__c.field-meta.xml
<CustomField>
    <fullName>DATA__c</fullName>
    <description>Data value of all segments</description>
    <label>DATA</label>
    <length>10</length>
    <type>Text</type>
</CustomField>