force-app/main/default/objects/ERP_Chart_Of_Accounts__c/fields/DESCRIPTION__c.field-meta.xml
<CustomField>
    <fullName>DESCRIPTION__c</fullName>
    <description>Description of the segment value.</description>
    <inlineHelpText>Description of the segment value.</inlineHelpText>
    <label>DESCRIPTION</label>
    <length>240</length>
    <type>Text</type>
</CustomField>