force-app/main/default/objects/ERP_Chart_Of_Accounts__c/fields/KEY__c.field-meta.xml
<CustomField>
    <fullName>KEY__c</fullName>
    <description>Primary Key</description>
    <label>KEY</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>