force-app/main/default/objects/ERP_Chart_Of_Accounts__c/fields/SEG_LVL1__c.field-meta.xml
<CustomField>
    <fullName>SEG_LVL1__c</fullName>
    <description>Segment Level 1 hierarchy.</description>
    <inlineHelpText>Segment Level 1 hierarchy.</inlineHelpText>
    <label>SEG_LVL1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>