force-app/main/default/objects/ERP_Chart_Of_Accounts__c/fields/SEG_LVL2__c.field-meta.xml
<CustomField>
    <fullName>SEG_LVL2__c</fullName>
    <description>Segment Level 2 hierarchy.</description>
    <inlineHelpText>Segment Level 2 hierarchy.</inlineHelpText>
    <label>SEG_LVL2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>