force-app/main/default/objects/ERP_Chart_Of_Accounts__c/fields/SEG_LVL2_DESC__c.field-meta.xml
<CustomField>
    <fullName>SEG_LVL2_DESC__c</fullName>
    <description>Description of Segment Level 2 hierarchy.</description>
    <inlineHelpText>Description of Segment Level 2 hierarchy.</inlineHelpText>
    <label>SEG_LVL2_DESC</label>
    <length>240</length>
    <type>Text</type>
</CustomField>