force-app/main/default/objects/ERP_Chart_Of_Accounts__c/fields/SEG_LVL3__c.field-meta.xml
<CustomField>
    <fullName>SEG_LVL3__c</fullName>
    <description>Segment Level 3 hierarchy.</description>
    <inlineHelpText>Segment Level 3 hierarchy.</inlineHelpText>
    <label>SEG_LVL3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>