force-app/main/default/objects/ERP_Chart_Of_Accounts__c/fields/SEGMENT_NUMBER__c.field-meta.xml
<CustomField>
    <fullName>SEGMENT_NUMBER__c</fullName>
    <description>Segment Number</description>
    <label>SEGMENT_NUMBER</label>
    <length>1</length>
    <type>Text</type>
</CustomField>